minor updates to docs

--- a/docs/src/man/introduction.ipynb
+++ b/docs/src/man/introduction.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "# About\n",
     "\n",
-    "This is a Julia implementation of option 29 of the [Mendel software](https://academic.oup.com/bioinformatics/article/29/12/1568/292810), originally programmed in Fortran. `MendelKinship.jl` contains new features, but its usage largely resembles Mendel by employing *control files* - requiring users to make a file to specify options instead of interacting with Julia directly. This is not the most Julian way of programming or usage experience... but unfortuantely we lack manpower to correct it. "
+    "This is a Julia implementation of option 29 of the [Mendel software](https://academic.oup.com/bioinformatics/article/29/12/1568/292810), originally programmed in Fortran. `MendelKinship.jl` contains new features, but its usage largely resembles Mendel by employing *control files* - requiring users to make a file to specify options instead of interacting with Julia directly. This is not the most Julian way of programming or usage experience... but unfortuantely we lack manpower to correct it. \n",
+    "\n",
+    "!!! note\n",
+    "\n",
+    "    Please read our [OpenMendel article](https://link.springer.com/article/10.1007/s00439-019-02001-z) which contains a section on **Kinship Comparison**."
    ]
   },
   {
